# pretty_calc

./: CMakeLists.txt  README.md  SwitchWidget.cpp  SwitchWidget.h  dark-style.css  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.css  styles.qrc
